--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/lp-util
 endorsed.classpath=
 excludes=
-file.reference.bcprov-jdk16-145.jar=../lib/bcprov-jdk16-145.jar
+file.reference.bcprov-jdk18on-175.jar=../lib/bcprov-jdk18on-175.jar
 file.reference.commons-codec-1.11.jar=../lib/commons-codec-1.11.jar
 file.reference.commons-codec-1.9.jar=../lib/commons-codec-1.9.jar
 file.reference.commons-collections4-4.1.jar=../lib/commons-collections4-4.1.jar
@@ -58,8 +58,8 @@ javac.classpath=\
     ${reference.appdriver-constant.jar}:\
     ${reference.appdriver-iface.jar}:\
     ${reference.rmj-lib.jar}:\
-    ${file.reference.bcprov-jdk16-145.jar}:\
     ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.bcprov-jdk18on-175.jar}:\
     ${file.reference.commons-codec-1.9.jar}:\
     ${file.reference.commons-collections4-4.1.jar}:\
     ${file.reference.commons-compress-1.9.jar}:\
