--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,18 +43,25 @@ file.reference.commons-compress-1.9.jar=../lib/commons-compress-1.9.jar
 file.reference.commons-dbcp2-2.7.0.jar=../lib/commons-dbcp2-2.7.0.jar
 file.reference.commons-lang3-3.3.2.jar=../lib/commons-lang3-3.3.2.jar
 file.reference.commons-logging-1.1.jar=../lib/commons-logging-1.1.jar
+file.reference.commons-math3-3.6.1.jar=../lib/commons-math3-3.6.1.jar
 file.reference.commons-pool2-2.4.2.jar=../lib/commons-pool2-2.4.2.jar
 file.reference.gson-2.3.jar=../lib/gson-2.3.jar
 file.reference.ini4j-0.5.1.jar=../lib/ini4j-0.5.1.jar
 file.reference.jsch-0.1.54.jar=../lib/jsch-0.1.54.jar
 file.reference.json-simple-1.1.1.jar=../lib/json-simple-1.1.1.jar
+file.reference.junit-4.12.jar=../lib/junit-4.12.jar
 file.reference.mysql-connector-java-5.1.49.jar=../lib/mysql-connector-java-5.1.49.jar
+file.reference.poi-4.0.1.jar=../lib/poi-4.0.1.jar
+file.reference.poi-ooxml-4.0.1.jar=../lib/poi-ooxml-4.0.1.jar
+file.reference.poi-ooxml-schemas-4.0.1.jar=../lib/poi-ooxml-schemas-4.0.1.jar
+file.reference.xmlbeans-3.0.2.jar=../lib/xmlbeans-3.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.appdriver-agent.jar}:\
     ${reference.appdriver-agentfx.jar}:\
     ${reference.appdriver-base.jar}:\
+    ${file.reference.junit-4.12.jar}:\
     ${reference.appdriver-constant.jar}:\
     ${reference.appdriver-iface.jar}:\
     ${reference.rmj-lib.jar}:\
@@ -71,7 +78,14 @@ javac.classpath=\
     ${file.reference.ini4j-0.5.1.jar}:\
     ${file.reference.jsch-0.1.54.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.mysql-connector-java-5.1.49.jar}
+    ${file.reference.mysql-connector-java-5.1.49.jar}:\
+    ${file.reference.poi-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
+    ${file.reference.xmlbeans-3.0.2.jar}:\
+    ${reference.lp-inventory-pojo.jar}:\
+    ${reference.lp-inventory-base.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -115,12 +129,16 @@ project.appdriver-agentfx=../appdriver-agentfx
 project.appdriver-base=../appdriver-base
 project.appdriver-constant=../appdriver-constant
 project.appdriver-iface=../appdriver-iface
+project.lp-inventory-base=../lp-inventory-base
+project.lp-inventory-pojo=../lp-inventory-pojo
 project.rmj-lib=../rmj-lib
 reference.appdriver-agent.jar=${project.appdriver-agent}/dist/appdriver-agent.jar
 reference.appdriver-agentfx.jar=${project.appdriver-agentfx}/dist/appdriver-agentfx.jar
 reference.appdriver-base.jar=${project.appdriver-base}/dist/appdriver-base.jar
 reference.appdriver-constant.jar=${project.appdriver-constant}/dist/appdriver-constant.jar
 reference.appdriver-iface.jar=${project.appdriver-iface}/dist/appdriver-iface.jar
+reference.lp-inventory-base.jar=${project.lp-inventory-base}/dist/lp-inventory-base.jar
+reference.lp-inventory-pojo.jar=${project.lp-inventory-pojo}/dist/lp-inventory-pojo.jar
 reference.rmj-lib.jar=${project.rmj-lib}/dist/rmj-lib.jar
 run.classpath=\
     ${javac.classpath}:\
