--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,6 +47,7 @@ file.reference.commons-math3-3.6.1.jar=../lib/commons-math3-3.6.1.jar
 file.reference.commons-pool2-2.4.2.jar=../lib/commons-pool2-2.4.2.jar
 file.reference.gson-2.3.jar=../lib/gson-2.3.jar
 file.reference.ini4j-0.5.1.jar=../lib/ini4j-0.5.1.jar
+file.reference.jasperreports-6.19.0.jar=../lib/jasperreports-6.19.0.jar
 file.reference.jsch-0.1.54.jar=../lib/jsch-0.1.54.jar
 file.reference.json-simple-1.1.1.jar=../lib/json-simple-1.1.1.jar
 file.reference.junit-4.12.jar=../lib/junit-4.12.jar
@@ -85,7 +86,8 @@ javac.classpath=\
     ${file.reference.xmlbeans-3.0.2.jar}:\
     ${reference.lp-inventory-pojo.jar}:\
     ${reference.lp-inventory-base.jar}:\
-    ${file.reference.commons-math3-3.6.1.jar}
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.jasperreports-6.19.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
